# dataset-cv-rel-pos

./: .gitmodules  README.md  calibration_manual_extrinsic.py  cfusdlog.py  copyusd.py  data_collection_aideck.py  dataset_annotate_bb.py  dataset_apply_filter.py  dataset_filter.py  dataset_interaction.py  dataset_interaction2.py  dataset_merge.py  dataset_pack.py  dataset_stats.py  inference.py  offline_calibration.py  offline_calibration_intrinsic.py  opencv_calibration.py  parameters.py  plot_results.py  postprocess.py  raw2sync_dataset.py  train.py  utils.py
cvmrs_ros/: CMakeLists.txt  package.xml  setup.cfg
cvmrs_ros/config/: config.rviz  crazyflies.yaml  crazyswarm2_server.yaml  motion_capture.yaml  teleop.yaml  teleop_5.yaml
cvmrs_ros/cvmrs_ros/: camera_calibration.py  col_avoid_test.py  downwash.py  multi_cfs_circular_motion.py  multi_cfs_swap.py  random_flight.py  state_estimate_test.py  sync_clock.py  teleop.py  teleop_joy.py  three_cfs_circular_motion.py  two_cfs_circular_motion.py  two_cfs_linear_motion.py
cvmrs_ros/data/: circle0.4.csv  circle0.6.csv
cvmrs_ros/launch/: launch.py  teleop_launch.py
hardware/: config.txt  convert_log_to_csv.py  interpolate.py  plot_csvs.py  plot_usd.py
hardware/calibration/: Readme.md
