[options.entry_points]
console_scripts =
    camera_calibration = cvmrs_ros.camera_calibration:main
    col_avoid_test = cvmrs_ros.col_avoid_test:main
    downwash = cvmrs_ros.downwash:main
    multi_cfs_circular_motion = cvmrs_ros.multi_cfs_circular_motion:main
    multi_cfs_swap = cvmrs_ros.multi_cfs_swap:main
    state_estimate_test = cvmrs_ros.state_estimate_test:main
    sync_clock = cvmrs_ros.sync_clock:main
    teleop_joy= cvmrs_ros.teleop_joy:main
    teleop = cvmrs_ros.teleop:main
    three_cfs_circular_motion = cvmrs_ros.three_cfs_circular_motion:main
    two_cfs_circular_motion = cvmrs_ros.two_cfs_circular_motion:main
    two_cfs_linear_motion = cvmrs_ros.two_cfs_linear_motion:main
    random_flight = cvmrs_ros.random_flight:main